# MosaicCraft

./: Cargo.toml
projects/mosaic-craft/: Cargo.toml
projects/mosaic-craft/src/: main.rs
projects/mosaic-craft/src/renderer/: mod.rs  sample.rs
projects/mosaic-mask/: Cargo.toml
projects/mosaic-mask/src/: lib.rs
projects/mosaic-mask/src/renderer/: mod.rs
projects/mosaic-mask/src/shapes/: mod.rs
projects/mosaic-mask/src/utils/: mod.rs
projects/mosaic-pixel/: Cargo.toml
projects/mosaic-pixel/src/: lib.rs
projects/mosaic-pixel/src/color/: mod.rs
projects/mosaic-pixel/src/error/: image_error.rs  io_error.rs  mod.rs  sled_error.rs
projects/mosaic-pixel/src/renderer/: mod.rs  shape.rs
projects/mosaic-pixel/src/signature/: mod.rs
projects/mosaic-pixel/src/storage/: mod.rs  signature.rs  workspace.rs
projects/mosaic-pixel/tests/: main.rs
projects/mosaic-rs/: Cargo.toml
projects/mosaic-rs/src/: lib.rs
projects/mosaic-rs/src/renderer/: mod.rs  sample.rs  shape.rs
