[package]
name = "mosaic-craft"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "..."
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"


[dependencies]


[dependencies.iced]
version = "0.8.0"
features = ["image", "svg", "wgpu", "default_system_font"]

[dev-dependencies]

[features]
default = []
