[package]
name = "mosaic-mask"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "..."
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"


[dependencies]
log = "0.4.17"
sled = "0.34.7"
image = { version = "0.24.5" }
imageproc = "0.23.0"
serde = "1.0.152"
bincode = "2.0.0-rc.2"
serde_derive = "1.0.152"
serde_json = "1.0.93"
palette_extract = "0.1.0"

[dev-dependencies]

[features]
default = []
