[package]
name = "mosaic-pixel"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "..."
readme = "Readme.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
image = "0.24.5"
serde = "1.0.152"
serde_json = "1.0.93"

[dev-dependencies]

[features]
default = []
