[package]
name = "mosaic-pixel"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "..."
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"


[dependencies]
lru = "0.9.0"
sled = "0.34.7"
image = "0.24.5"
serde = "1.0.152"
serde_json = "1.0.93"
palette_extract = "0.1.0"

[dev-dependencies]

[features]
default = []
